--- a/css/style.css
+++ b/css/style.css
@@ -8,40 +8,51 @@
     height: 100px;
 }
 main{
+    grid-template-columns: 1fr;
+    grid-template-rows: .4fr 1fr;
+    grid-template-areas: "menu" "container";
     background: #222629;
     width: 100vw;
     height: 100vh;
 }
-main h1{
+.title{
     text-align: center;
-    padding-top: 5vh;
+    padding-top: 15vh;
     font-size: 40px;
     color: #fff;
 }
-main p{
+.description{
     text-align: center;
     color: #BDBEBF;
 }
 #avatar{
-    width: 500px;
-    height: 500px;
-    top: 9vw;
-    left: 63.1vw;
+    width: 450px;
+    height: 450px;
+    top: 31.42%;
+    left: 65%;
     position: absolute;
 }
 .invite_button{
     font-family: open sans,Helvetica,arial,sans-serif;
+    text-shadow: 0px 0px 15px black;
+    background-color: #ff4c5c;
     cursor: pointer;
     font-weight: 600;
     display: flex;
     align-items: center;
     outline: none;
+    border: none;
     color: #fff;
-    padding: 5px;
+    padding: 6.5px;
     border-radius: 5px;
     position: absolute;
     left: 44.2vw;
-    top: 35vh;
+    top: 50vh;
+    transition-duration: 0.4s;
+}
+.invite_button:hover{
+    background-color: #222629;
+    border: 1px dashed #efefef;
 }
 main button img{
     width: 35px;
