--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ main{
     position: absolute;
 }
 .invite_button{
+    width: 166px;
+    height: 48px;
     font-family: open sans,Helvetica,arial,sans-serif;
     text-shadow: 0px 0px 15px black;
     background-color: #ff4c5c;
@@ -53,6 +55,35 @@ main{
 .invite_button:hover{
     background-color: #222629;
     border: 1px dashed #efefef;
+}
+.commands_button{
+    width: 166px;
+    height: 48px;
+    font-family: open sans,Helvetica,arial,sans-serif;
+    text-shadow: 0px 0px 15px black;
+    background-color: #222629;
+    cursor: pointer;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    outline: none;
+    border: 1px solid #efefef;
+    color: #fff;
+    padding: 6.5px;
+    border-radius: 5px;
+    position: absolute;
+    left: 44.2vw;
+    top: 60vh;
+    transition-duration: 0.4s;
+    padding-left: 16.5px;
+}
+.commands_button:hover{
+    background-color: #ff4c5c;
+    border: none;
+}
+.commands_button img{
+    width: 20px;
+    height: 20px;
 }
 main button img{
     width: 35px;
