--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ main{
 }
 .invite_button:hover{
     background-color: #222629;
-    border: 1px dashed #efefef;
+    border: 1px solid #efefef;
 }
 .commands_button{
     width: 166px;
