--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ main{
     grid-template-areas: "menu" "container";
     background: #222629;
     width: 100vw;
+    height: 200vh;
+}
+#container{
+    width: 100vw;
     height: 100vh;
 }
 .title{
@@ -84,6 +88,27 @@ main{
 .commands_button img{
     width: 20px;
     height: 20px;
+}
+.home_button{
+    width: 166px;
+    height: 48px;
+    font-family: open sans,Helvetica,arial,sans-serif;
+    text-shadow: 0px 0px 15px black;
+    background-color: #222629;
+    cursor: pointer;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    outline: none;
+    border: 1px solid #efefef;
+    color: #fff;
+    padding: 6.5px;
+    border-radius: 5px;
+    position: absolute;
+    left: 44.2vw;
+    top: 160vh;
+    transition-duration: 0.4s;
+    padding-left: 16.5px;
 }
 main button img{
     width: 35px;
