--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: poppins,Helvetica,arial,sans-serif;
+    overflow: hidden;
 }
 #logo img{
     width: 100px;
@@ -94,6 +95,7 @@ main{
     height: 48px;
     font-family: open sans,Helvetica,arial,sans-serif;
     text-shadow: 0px 0px 15px black;
+    text-align: center;
     background-color: #222629;
     cursor: pointer;
     font-weight: 600;
